# mdit-py-toc

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-python.yml  deploy-pypi.yml  release.yml
mdit_py_toc/: __version__.py  plugin.py
tests/: test_plugin.py
