[tool.poetry]
name = "mdit-py-toc"
version = "1.0.0"
description = "A table of contents (TOC) plugin for markdown-it-py"
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bjoernricks/mdit-py-toc"
repository = "https://github.com/bjoernricks/mdit-py-toc/"
classifiers = [
    # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.dependencies]
python = "^3.9"
markdown-it-py = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
